# image-to-ascii

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  readme.md  viewer.html
.github/workflows/: release.yml
alphabets/: alphabet.txt  letters.txt  lowercase.txt  minimal.txt  symbols.txt
fonts/: courier.bdf  kourier.bdf
src/: convert.rs  font.rs  gif.rs  image.rs  lib.rs  main.rs  metrics.rs  metrics_simd.rs  progress.rs
