[package]
name = "image-to-ascii"
version = "0.7.0"
authors = ["kpberry"]
edition = "2021"
description = "Converts images and gifs to ascii art"
license = "MIT"
repository = "https://github.com/kpberry/image-to-ascii"
exclude = ["gallery", ".github"]

[[bin]]
path = "src/main.rs"
name = "image-to-ascii"

[lib]
name = "img_to_ascii"
path = "src/lib.rs"

[dependencies]
image = "0.24.2"
bdf-reader = "0.1.2"
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
serde_json = "1.0.81"
indicatif = "0.16.2"
colored = "2.0.0"
