[package]
name = "image-to-ascii"
version = "0.7.0"
authors = ["kpberry"]
edition = "2021"
description = "Converts images and gifs to ascii art"
license = "MIT"
repository = "https://github.com/kpberry/image-to-ascii"
exclude = ["gallery", ".github"]

[[bin]]
path = "src/main.rs"
name = "image-to-ascii"

[lib]
name = "img_to_ascii"
path = "src/lib.rs"

[dependencies]
image = "0.25.8"
bdf-reader = "0.1.3"
clap = { version = "4.5.48", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"
serde_json = "1.0.145"
indicatif = "0.18.0"
colored = "3.0.0"
